--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 	--light: #EEE;
 	--green: #4cffa0;
 	--greener: #0ab95c;
+	--yellow: #cfeb00;
 }
 
 * {
@@ -20,8 +21,21 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
-	color: #FFF;
+	background-image: url('bg.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100% 100%;
+	align-items: center;
+	justify-content: center;
+}
+
+.main-container{
+	display: flex;
+	flex-direction: column;
 	background-color: var(--dark);
+	width: 70%;
+	height: 80%;
+	border-radius: 5%;
 }
 
 header {
@@ -29,6 +43,8 @@ header {
 	max-width: 800px;
 	width: 100%;
 	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
 }
 
 header h1{ 
@@ -36,9 +52,10 @@ header h1{
 	font-weight: 300;
 	color: var(--grey);
 	margin-bottom: 1rem;
+	text-align: center;
 }
 
-#new-task-form {
+#new-task {
 	display: flex;;
 }
 
@@ -87,7 +104,8 @@ input, button {
 	padding: 0;
 	margin-right: 1rem;
 	display: flex;
-	
+	max-width: 800px;
+	width: 100%;
 	font-size: 1.25rem;
 	font-weight: 700;
 	/* background-image: linear-gradient(to right, var(--green), var(--purple)); */
