--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
-	background-image: url('bg.jpg');
+	background-image: url('images/blue-bg.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: 100% 100%;
@@ -33,9 +33,9 @@ body {
 	display: flex;
 	flex-direction: column;
 	background-color: var(--dark);
-	width: 70%;
-	height: 80%;
-	border-radius: 5%;
+	width: 50%;
+	height: 100%;
+	border-radius: 50px;
 }
 
 header {
@@ -50,10 +50,22 @@ header {
 header h1{ 
 	font-size: 2.5rem;
 	font-weight: 300;
-	color: var(--grey);
+	color: var(--light);
 	margin-bottom: 1rem;
 	text-align: center;
+	-webkit-animation: glow 1s ease-in-out infinite alternate;
+	-moz-animation: glow 1s ease-in-out infinite alternate;
+	animation: glow 1s ease-in-out infinite alternate;
 }
+
+@-webkit-keyframes glow {
+	from {
+	  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+	}
+	to {
+	  text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+	}
+  }
 
 #new-task {
 	display: flex;;
@@ -74,6 +86,7 @@ input, button {
 	margin-right: 1rem;
 	color: var(--light);
 	font-size: 1.25rem;
+	/* width : 150%; */
 }
 
 #new-task-input::placeholder {
@@ -104,11 +117,10 @@ input, button {
 	padding: 0;
 	margin-right: 1rem;
 	display: flex;
-	max-width: 800px;
-	width: 100%;
+	
+	width: 250px;
 	font-size: 1.25rem;
 	font-weight: 700;
-	/* background-image: linear-gradient(to right, var(--green), var(--purple)); */
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: var(--light);
 	cursor: pointer;
